# classeviva-client

./: README.md  it.sadyn.ClasseVivaClient.json  meson.build
data/: it.sadyn.ClasseVivaClient.desktop.in  it.sadyn.ClasseVivaClient.gschema.xml  it.sadyn.ClasseVivaClient.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: classeviva-client.data.gresource.xml  it.sadyn.ClasseVivaClient.src.gresource.xml  main.js  meson.build  window.js  window.ui
